# kore-studio

./: .gitignore  CONFIG.md  README.md  pipeline.md  pyproject.toml  requirements.txt  todo.txt
.opencode/plans/: fix-vocal-balance-and-gate.md  kore-studio-cli.md
app/: api_server.py  database.py  main.py
app/cli/: kore.py  noise-reducer.py  studio.py  vocal-effects.py
app/pipeline/: device_io.py  latency.py  mixer.py  noise_reducer_service.py  pitch_correct.py  studio_pipeline.py
app/routers/: ingestion.py  process.py
app/tools/: analyze.py  compare.py
reports/: 01-audit.md  02-baseline-scores.md  03-capture-fixes.md  04-06-processing-mix.md  07-listening-validation.md  08-hardening.md  diagnostic-vocal-start-suppression.md
tests/: test_pipeline.py
