[project]
name = "karaoke-mixing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pedalboard>=0.9.23",
    "pyloudnorm>=0.1.1",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "deepfilternet",
    "torch==2.6.0",
    "torchaudio==2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
