[project]
name = "kore"
version = "0.1.0"
description = "Vocal-karaoke mixing pipeline — noise reduction, vocal effects, and loudness-normalized mix"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pedalboard>=0.9.23",
    "pyloudnorm>=0.1.1",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "deepfilternet",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "pyaudio>=0.2.14",
    "rich>=13.7.0",
    "inquirer>=3.2.0",
    "psola>=0.0.1",
    "numpy>=1.24.0",
]

[project.scripts]
kore = "app.cli.kore:main"
kore-studio = "app.cli.studio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
